--- a/HW/HW04.ipynb
+++ b/HW/HW04.ipynb
@@ -60,24 +60,24 @@
      "text": [
       "\n",
       "- Conjugate Gradiant method \n",
-      "  time1: 0.0007288455963134766\n",
+      "  time1: 0.0009932518005371094\n",
       "\n",
       "[2.90191936 2.60767745 2.52879042 2.50748425 2.50114659 2.4971021\n",
       " 2.48726181 2.45194513 2.3205187  1.83012968]\n",
       "\n",
       "\n",
       "- Gauss Elimin method\n",
-      "  time2: 0.00021219253540039062\n",
+      "  time2: 0.0004360675811767578\n",
       "  \n",
       "[2.90191936 2.60767745 2.52879042 2.50748425 2.50114659 2.4971021\n",
       " 2.48726181 2.45194513 2.3205187  1.83012968]\n",
       "\n",
-      "time1/time2: 3.4348314606741575\n"
+      "time1/time2: 2.277747402952433\n"
      ]
     }
    ],
    "source": [
-    "# 2\n",
+    "# 2-1\n",
     "import numpy as np\n",
     "import math\n",
     "from time import time\n",
@@ -147,6 +147,62 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "- Conjugate Gradiant method \n",
+      "  time1: 0.5496501922607422\n",
+      "\n",
+      "[2.90192379 2.60769515 2.52885683 ... 2.45190528 2.32050808 1.83012702]\n",
+      "\n",
+      "\n",
+      "- Gauss Elimin method\n",
+      "  time2: 15.566628456115723\n",
+      "  \n",
+      "[2.90192379 2.60769515 2.52885683 ... 2.45190528 2.32050808 1.83012702]\n",
+      "\n",
+      "time1/time2: 0.0353095208644746\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2-2\n",
+    "\n",
+    "n = 10000\n",
+    "A = - np.eye(n,k=-1) + 4*np.eye(n,k=0) - np.eye(n,k=1)\n",
+    "b = 5*np.ones(n); b[0] = 9\n",
+    "\n",
+    "start_time = time()\n",
+    "vsol, Int = conjGrad(A,b)\n",
+    "conj_time = time() - start_time\n",
+    "\n",
+    "print(f\"\"\"\n",
+    "- Conjugate Gradiant method \n",
+    "  time1: {conj_time}\n",
+    "\n",
+    "{vsol}\n",
+    "\"\"\")\n",
+    "\n",
+    "start_time = time()\n",
+    "vsol = gaussElimin(A,b)\n",
+    "gaus_time = time() - start_time\n",
+    "\n",
+    "print(f\"\"\"\n",
+    "- Gauss Elimin method\n",
+    "  time2: {gaus_time}\n",
+    "  \n",
+    "{vsol}\n",
+    "\n",
+    "time1/time2: {conj_time/gaus_time}\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "[-1.  0.  1.]\n",
       "\n",
       "linalg.solve:[-1.  0.  1.]\n"
@@ -156,6 +212,7 @@
    "source": [
     "# 3\n",
     "import numpy as np\n",
+    "\n",
     "A = np.array([[1.,0.,1.],\n",
     "              [0.,1.,0.],\n",
     "              [0.,0.,1.]])\n",
